All alignment issues fixed

--- a/styles.css
+++ b/styles.css
@@ -43,33 +43,40 @@ body span {
 /* Side bar expanded version Styling */
 
 .sidebar-logo {
+  display: flex;
+  justify-content: center;
+  width: 77.5%;
+  margin: 0 auto;
   height: 3.5rem;
   border-bottom: 1px solid var(--bar-color-dard-op);
   margin-bottom: 1rem;
   text-align: center;
-  padding: 0 0.25rem; /* Default padding */
+  /* padding: 0 0.25rem; */
   transition: padding 0.3s ease; /* Add smooth transition for padding */
 }
 
 .logo-expanded {
-  padding: 0 1rem !important; /* Expanded padding */
+  padding: 0 1rem !important;
 }
 
 #lbLogo {
   display: flex;
   align-items: center;
-  gap: .25rem;
+  justify-content: center;
+  gap: .5rem;
   text-decoration: none;
   color: var(--white-color);
+  padding-left: .8rem;
+  transition: all 0.3s ease;
 }
 
 #lbLogo h1 {
-  font-size: 1.25rem;
+  font-size: 1.5rem;
   text-align: left;
 }
 
 .logo-text-div p {
-  font-size: .3rem;
+  font-size: .45rem;
   text-align: left;
 }
 
